# strom

./: Cargo.toml  README.md
crates/crypto/: Cargo.toml
crates/math/: Cargo.toml
crates/math/src/: feild.rs  field.rs  lib.rs  parallel.rs
crates/payload/: Cargo.toml
crates/prover/: Cargo.toml
crates/stark/: Cargo.toml
crates/task/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: hash.rs  lib.rs
crates/verifier/: Cargo.toml
