[package]
name = "math"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
crossbeam-utils.workspace = true
rand.workspace = true

[dev-dependencies]
criterion = "0.5.0"
num-bigint = "0.4.0"

[features]
default = ["std"]

std = ["crossbeam-utils/std", "rand/std"]

[[bench]]
name = "benchmark"
harness = false